[package]
edition = "2021"
name = "localauth0"
version = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true # Automatically strip symbols (elf) from the binary.
opt-level = "z" # Optimize for size.
lto = true # instructs the linker to optimize at the link stage
codegen-units = 1 # run parallel compilation prevents some optimizations

[dependencies]
actix-files = "0.6.0"
actix-web = { version = "4", features = ["openssl"] }

derive-getters = "0.2.0"

serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.80"

base64 = "0.13.0"
base64-url = "1.4.13"
openssl = "0.10.60"

chrono = {version = "0.4.19", features = ["serde"]}

thiserror = "1.0.31"

jsonwebtoken = "8.1.0"
rand = "0.8.5"
uuid = {version = "1.1.2", features = ["v4"]}

toml = "0.5.9"

prima_rs_logger = "0.1"

futures = "0.3.21"
reqwest = { version = "0.11.24", default-features = false, features = ["native-tls"] }
tokio = { version = "1.36.0", default-features = false }

[features]
default = []
vendor-openssl = [ "openssl/vendored" ]
