[package]
edition = "2021"
name = "localauth0_web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16.0"
reqwasm = "0.5.0"
gloo-timers = "0.2.4"
anyhow = "1.0.44"
getrandom = {version = "0.2", features = ["js"]}
log = "0.4"
rand = "0.8.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasm-logger = "0.2"
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"
web-sys = {version = "0.3", features = ["Navigator", "Clipboard"]}
url = "2.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.15.0", features = ["full"] }
