[package]
edition = "2021"
name = "localauth0_web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
reqwasm = "0.5.0"
gloo-timers = "0.3"
anyhow = "1.0"
getrandom = {version = "0.2", features = ["js"]}
log = "0.4"
rand = "0.8.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasm-logger = "0.2"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = {version = "0.3", features = ["Navigator", "Clipboard"]}
url = "2.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.32", features = ["full"] }
