[package]
edition = "2021"
name = "localauth0_web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1 # run parallel compilation prevents some optimizations
lto = true # instructs the linker to optimize at the link stage
opt-level = "z" # Optimize for size.

[dependencies]
anyhow = "1.0"
getrandom = {version = "0.2", features = ["js", "wasm_js"]}
gloo-timers = "0.3"
js-sys = "0.3"
log = "0.4"
rand = "0.9.3"
reqwasm = "0.5.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2.4"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = {version = "0.3", features = ["Navigator", "Clipboard"]}
yew = {version = "0.21", features = ["csr"]}
yew-router = "0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1.38", features = ["full"]}
